[HW7] Refactoring. Added new exceptions. Added new check