@@ -3,6 +3,9 @@ package ru.otus.novikov.java.hw7.dao;
 import ru.otus.novikov.java.hw7.annotations.MyField;
 import ru.otus.novikov.java.hw7.annotations.MyIdField;
 import ru.otus.novikov.java.hw7.annotations.MyTable;
+import ru.otus.novikov.java.hw7.dao.entities.EntityField;
+import ru.otus.novikov.java.hw7.dao.entities.EntityMetaInfo;
+import ru.otus.novikov.java.hw7.exceptions.EntityException;
 import ru.otus.novikov.java.hw7.exceptions.EntityNotFoundException;
 import ru.otus.novikov.java.hw7.exceptions.PrepareRepositoryException;
 
@@ -16,14 +19,14 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class AbstractRepository<T> {
 
-    DataSource dataSource;
-    Class<T> cls;
-    String tableName;
+    private final DataSource dataSource;
+    private final Class<T> cls;
+    private final String tableName;
+    private EntityMetaInfo entityInfo;
 
     private PreparedStatement psFindAll;
     private PreparedStatement psFindById;
@@ -31,14 +34,6 @@ public class AbstractRepository<T> {
     private PreparedStatement psUpdate;
     private PreparedStatement psDeleteAll;
     private PreparedStatement psDeleteById;
-
-    private List<Field> fieldsWithoutIdField;
-    private List<Field> allFields;
-    private Field idField;
-
-    private Map<String, Method> fieldNameToGetterMethodMap;
-    private Map<String, Method> fieldNameToSetterMethodMap;
-
 
     public AbstractRepository(DataSource dataSource, Class<T> cls) {
         this.dataSource = dataSource;
@@ -48,48 +43,28 @@ public class AbstractRepository<T> {
     }
 
     private void prepareRepository(Class<T> cls) {
-        fieldsWithoutIdField = Arrays.stream(cls.getDeclaredFields())
+        try {
+            cls.getConstructor();
+        } catch (NoSuchMethodException e) {
+            throw new PrepareRepositoryException("У сущности отсутствует конструктор по умолчанию");
+        }
+
+        List<EntityField> entityFieldsWithoutIdField = Arrays.stream(cls.getDeclaredFields())
             .filter(f -> !f.isAnnotationPresent(MyIdField.class))
             .filter(f -> f.isAnnotationPresent(MyField.class))
-            .collect(Collectors.toList());
+            .map(this::buildEntityField).toList();
 
-        if (fieldsWithoutIdField.isEmpty()) {
+        if (entityFieldsWithoutIdField.isEmpty()) {
             throw new PrepareRepositoryException("У сущности отсутствует другие поля кроме идентификатора. Неполное описание сущности");
         }
 
-        allFields = Arrays.stream(cls.getDeclaredFields()).collect(Collectors.toList());
-
-        idField = Arrays.stream(cls.getDeclaredFields())
+        Field idField = Arrays.stream(cls.getDeclaredFields())
             .filter(f -> f.isAnnotationPresent(MyIdField.class))
             .findFirst().orElseThrow(() -> new PrepareRepositoryException("У сущности отсутствует обязательный идентификатор"));
 
-        fieldNameToGetterMethodMap = allFields.stream().collect(Collectors.toMap(Field::getName, (field) -> {
-            String fieldName = field.getName();
-            try {
-                return cls.getMethod("get" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1));
-            } catch (NoSuchMethodException e) {
-                e.printStackTrace();
-            }
-            return null;
-        }));
+        EntityField entityFieldWithIdField = buildEntityField(idField);
 
-        if (fieldNameToGetterMethodMap.size() != allFields.size()) {
-            throw new PrepareRepositoryException("Количество полей сущности не соответствует количеству методов getter");
-        }
-
-        fieldNameToSetterMethodMap = allFields.stream().collect(Collectors.toMap(Field::getName, (field) -> {
-            String fieldName = field.getName();
-            try {
-                return cls.getMethod("set" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1), field.getType());
-            } catch (NoSuchMethodException e) {
-                e.printStackTrace();
-            }
-            return null;
-        }));
-
-        if (fieldNameToSetterMethodMap.size() != allFields.size()) {
-            throw new PrepareRepositoryException("Количество полей сущности не соответствует количеству методов setter");
-        }
+        entityInfo = new EntityMetaInfo(entityFieldWithIdField, entityFieldsWithoutIdField);
 
         prepareStatementCreate();
         prepareStatementFindById();
@@ -99,28 +74,53 @@ public class AbstractRepository<T> {
         prepareStatementDeleteAll();
     }
 
+    private EntityField buildEntityField(Field field) {
+        String fieldName = field.getName();
+        Method getter;
+        Method setter;
+        try {
+            getter = cls.getMethod("get" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1));
+        } catch (NoSuchMethodException e) {
+            throw new PrepareRepositoryException(String.format("Отсутствует getter для поля %s", fieldName));
+        }
+        try {
+            setter = cls.getMethod("set" + fieldName.substring(0, 1).toUpperCase() + fieldName.substring(1), field.getType());
+        } catch (NoSuchMethodException e) {
+            throw new PrepareRepositoryException(String.format("Отсутствует setter для поля %s", fieldName));
+        }
+        return new EntityField(field, getter, setter);
+    }
+
     public void create(T entity) {
         try {
-            for (int i = 0; i < fieldsWithoutIdField.size(); i++) {
-                Field field = fieldsWithoutIdField.get(i);
-                psCreate.setObject(i + 1, fieldNameToGetterMethodMap.get(field.getName()).invoke(entity));
-            }
+            AtomicInteger i = new AtomicInteger(1);
+            entityInfo.getFields().forEach(field -> {
+                try {
+                    psCreate.setObject(i.getAndIncrement(), field.getGetter().invoke(entity));
+                } catch (SQLException | IllegalAccessException | InvocationTargetException e) {
+                    e.printStackTrace();
+                }
+            });
             psCreate.executeUpdate();
         } catch (Exception e) {
-            throw new RuntimeException(e.getCause());
+            throw new EntityException(String.format("Ошибка при создании %s", cls.getName()), e.getCause());
         }
     }
 
     public void update(T entity) {
         try {
-            for (int i = 0; i < fieldsWithoutIdField.size(); i++) {
-                Field field = fieldsWithoutIdField.get(i);
-                psUpdate.setObject(i + 1, fieldNameToGetterMethodMap.get(field.getName()).invoke(entity));
-            }
-            psUpdate.setObject(fieldsWithoutIdField.size() + 1, fieldNameToGetterMethodMap.get(idField.getName()).invoke(entity));
+            AtomicInteger i = new AtomicInteger(1);
+            entityInfo.getFields().forEach(field -> {
+                try {
+                    psUpdate.setObject(i.getAndIncrement(), field.getGetter().invoke(entity));
+                } catch (SQLException | IllegalAccessException | InvocationTargetException e) {
+                    e.printStackTrace();
+                }
+            });
+            psUpdate.setObject(entityInfo.getFields().size() + 1, entityInfo.getIdField().getGetter().invoke(entity));
             psUpdate.executeUpdate();
         } catch (Exception e) {
-            throw new RuntimeException(e.getCause());
+            throw new EntityException(String.format("Не удалось обновить %s", cls.getName()), e.getCause());
         }
     }
 
@@ -131,19 +131,15 @@ public class AbstractRepository<T> {
 
             while (resultSet.next()) {
                 T newObject = cls.getConstructor().newInstance();
-                allFields.forEach(field -> {
-                    try {
-                        Method method = fieldNameToSetterMethodMap.get(field.getName());
-                        method.invoke(newObject, resultSet.getObject(field.getName(), field.getType()));
-                    } catch (IllegalAccessException | InvocationTargetException | SQLException e) {
-                        e.printStackTrace();
-                    }
+                setFieldToNewObject(newObject, entityInfo.getIdField(), resultSet);
+                entityInfo.getFields().forEach(field -> {
+                    setFieldToNewObject(newObject, field, resultSet);
                 });
                 out.add(newObject);
             }
             return out;
         } catch (SQLException | NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
-            throw new RuntimeException(e.getCause());
+            throw new EntityException(String.format("Ошибка при поиске всех %s", cls.getName()), e.getCause());
         }
     }
 
@@ -154,20 +150,24 @@ public class AbstractRepository<T> {
             T newObject = cls.getConstructor().newInstance();
 
             if (resultSet.next()) {
-                allFields.forEach(field -> {
-                    try {
-                        Method method = fieldNameToSetterMethodMap.get(field.getName());
-                        method.invoke(newObject, resultSet.getObject(field.getName(), field.getType()));
-                    } catch (IllegalAccessException | InvocationTargetException | SQLException e) {
-                        e.printStackTrace();
-                    }
+                setFieldToNewObject(newObject, entityInfo.getIdField(), resultSet);
+                entityInfo.getFields().forEach(field -> {
+                    setFieldToNewObject(newObject, field, resultSet);
                 });
             } else {
                 throw new EntityNotFoundException(String.format("Не найдён объект по идентификатору %s", id));
             }
             return newObject;
         } catch (SQLException | NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
-            throw new RuntimeException(e.getCause());
+            throw new EntityException(String.format("Ошибка при поиске %s по идентификатору %s", cls.getName(), id), e.getCause());
+        }
+    }
+
+    private void setFieldToNewObject(T newObject, EntityField entityField, ResultSet resultSet) {
+        try {
+            entityField.getSetter().invoke(newObject, resultSet.getObject(entityField.getField().getName(), entityField.getField().getType()));
+        } catch (IllegalAccessException | InvocationTargetException | SQLException e) {
+            throw new EntityException(String.format("Ошибка при установке полей для %s", cls.getName()), e.getCause());
         }
     }
 
@@ -176,7 +176,7 @@ public class AbstractRepository<T> {
             psDeleteById.setLong(1, id);
             psDeleteById.executeUpdate();
         } catch (SQLException e) {
-            throw new RuntimeException(e.getCause());
+            throw new EntityException(String.format("Ошибка при удалении %s по идентификатору %s", cls.getName(), id), e.getCause());
         }
     }
 
@@ -184,7 +184,7 @@ public class AbstractRepository<T> {
         try {
             psDeleteAll.executeUpdate();
         } catch (SQLException e) {
-            e.printStackTrace();
+            throw new EntityException(String.format("Ошибка при удалении всех %s из таблицы", cls.getName()), e.getCause());
         }
     }
 
@@ -193,16 +193,14 @@ public class AbstractRepository<T> {
         StringBuilder query = new StringBuilder("insert into ");
         query.append(tableName).append(" (");
 
-        for (Field f : fieldsWithoutIdField) {
-            query.append(f.getName()).append(", ");
-        }
+        entityInfo.getFields().forEach(entityField -> {
+            query.append(entityField.getField().getName()).append(", ");
+        });
 
         query.setLength(query.length() - 2);
         query.append(") values (");
 
-        for (Field f : fieldsWithoutIdField) {
-            query.append("?, ");
-        }
+        query.append("?, ".repeat(entityInfo.getFields().size()));
 
         query.setLength(query.length() - 2);
         query.append(");");
@@ -225,7 +223,8 @@ public class AbstractRepository<T> {
     // SELECT * FROM %tableName where %idFieldName = %s
     private void prepareStatementFindById() {
         try {
-            psFindById = dataSource.getConnection().prepareStatement(String.format("SELECT * FROM %s where %s = ?", tableName, idField.getName()));
+            psFindById = dataSource.getConnection().prepareStatement(String.format("SELECT * FROM %s where %s = ?", tableName,
+                entityInfo.getIdField().getField().getName()));
         } catch (SQLException e) {
             throw new PrepareRepositoryException("Проверьте формирование prepareStatement для findById  . Ошибка: " + e.getMessage());
         }
@@ -235,13 +234,13 @@ public class AbstractRepository<T> {
     private void prepareStatementUpdate() {
         StringBuilder query = new StringBuilder(String.format("UPDATE %s SET ", tableName));
 
-        for (Field f : fieldsWithoutIdField) {
-            query.append(f.getName()).append(" = ?, ");
-        }
+        entityInfo.getFields().forEach(entityField -> {
+            query.append(entityField.getField().getName()).append(" = ?, ");
+        });
 
         query.setLength(query.length() - 2);
 
-        query.append(String.format(" WHERE %s = ?", idField.getName()));
+        query.append(String.format(" WHERE %s = ?", entityInfo.getIdField().getField().getName()));
 
         try {
             psUpdate = dataSource.getConnection().prepareStatement(query.toString());
@@ -262,7 +261,8 @@ public class AbstractRepository<T> {
     // DELETE FROM %tableName where %idFieldName = %s
     private void prepareStatementDeleteById() {
         try {
-            psDeleteById = dataSource.getConnection().prepareStatement(String.format("DELETE FROM %s where %s = ?", tableName, idField.getName()));
+            psDeleteById = dataSource.getConnection().prepareStatement(String.format("DELETE FROM %s where %s = ?", tableName,
+                entityInfo.getIdField().getField().getName()));
         } catch (SQLException e) {
             e.printStackTrace();
         }
